--- a/src/components/OrderMenu/OrderList/OrderList.css
+++ b/src/components/OrderMenu/OrderList/OrderList.css
@@ -12,6 +12,7 @@
 .order-list-background{
     background-color: white;
     width: 90%;
+    max-width: 580px;
     height: 60%;
     margin-top: 20px;
     overflow-y: scroll;
@@ -39,7 +40,7 @@
 }
 .order-list{   
     width: 100%;
-    font-size: 16px;
+    font-size: 14px;
 }
 .order-title{
     margin: 10px;
@@ -50,7 +51,7 @@
 }
 .bar{
     margin-left: 10px;
-    width: 80%;
+    width: 90%;
     background-color: black;
     height: 1px;
 }
@@ -59,20 +60,25 @@
     justify-content: space-between;
     align-items: center;
 }
-.confirm-button{
-    right: 0px;
+.order-buttons{
+    width: 60%;
+    display: flex;
+    justify-content: right;
+
+    align-items: center;
+}
+.confirm-button, .modify-button{
     border: none;
-    font-size: 16px;
-    padding: 10px;
     color: white;
+    padding: 10px;
+    font-size: 14px;
+    margin: 5px;
+}
+.confirm-button{
     background-color:rgb(13, 175, 13);
 }
-
-.order-buttons{
-    width: 55%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.modify-button{
+    background-color: #0275d8;
 }
 .delete-item{
     background-color: red;
@@ -82,14 +88,6 @@
     color: white;
     text-align: center;
     font-size: 15px;
-}
-.modify-button{
-    color: white;
-    border: none;
-    background-color: #0275d8;
-    padding: 5px;
-    font-size: 16px;
-    padding: 10px;
 }
 .empty-button{
     font-size: 18px;
@@ -104,4 +102,10 @@
     padding-left: 15px;
     display: block;
     color: red;
+}
+
+@media (min-width: 1024px){
+    .order-list-background{
+        margin: auto;
+    }
 }
