--- a/src/components/OrderMenu/OrderMenu.css
+++ b/src/components/OrderMenu/OrderMenu.css
@@ -7,7 +7,7 @@
     bottom:0px;
     width: 100%;
     height: 50px;
-    
+
 
 }
 .order{
@@ -41,4 +41,9 @@
 }
 .cart-icon{
     font-size: 18px;
+}
+@media (min-width: 1024px){
+    .order{
+        max-width: 266px;
+    }
 }
