--- a/src/components/OrderMenu/OrderMenu.css
+++ b/src/components/OrderMenu/OrderMenu.css
@@ -3,7 +3,7 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    
+  
     bottom:0px;
     width: 100%;
     height: 50px;
@@ -16,10 +16,11 @@
     align-items: center;
     width: 50%;
     height: 40px;
-    background-color: red;
+
    
 }
 .cart-button, .whatsapp-button{
+    cursor: pointer;
     border: none;
 }
 .cart-button{
@@ -41,6 +42,9 @@
 }
 .cart-icon{
     font-size: 18px;
+}
+.cart-button:hover{
+    background-color: rgb(214, 162, 20);
 }
 @media (min-width: 1024px){
     .order{
